--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel="stylesheet", href="/mdb-ui-kit/css/mdb.min.css")
     link(rel='preconnect' href='https://fonts.gstatic.com')
     link(href='https://fonts.googleapis.com/css2?family=Courgette&display=swap' rel='stylesheet')
@@ -15,3 +16,5 @@ html
 
 
     script(src="/mdb-ui-kit/js/mdb.min.js")
+    script(src="/jquery/dist/jquery.min.js")
+    script(src="/javascript/bootstrap.min.js")
