--- a/views/index.pug
+++ b/views/index.pug
@@ -50,7 +50,7 @@ block content
                 li
                   a(href="") <strong> Javascript,</strong> Jquery
                 li
-                  a(href="") <span> React.js, Node.js</span>(Express-generator, Mongo.db, Mongoose)
+                  a(href="") <span> Reactjs,Nextjs,Graphql,Apollo-server, Redux, Node.js, Express</span>(Express-generator, Mongo.db, Mongoose)
                 li
                   a(href="") Socket.io, Bower.js
                 li
