--- a/views/index.pug
+++ b/views/index.pug
@@ -44,17 +44,17 @@ block content
                 li
                   a(href="") Html, Css, Scss, Es5,6
                 li
-                  a(href="") Bootstrap md5, Semantic, Materialize, Wow.js
+                  a(href="") Bootstrap md5, Semantic, Materialize, Wow.js, Tailwind-css, Material-UI
                 li
                   a(href="") Git, Github
                 li
                   a(href="") <strong> Javascript,</strong> Jquery
                 li
-                  a(href="") <span> Reactjs,Nextjs,Graphql,Apollo-server, Redux, Node.js, Express</span>(Express-generator, Mongo.db, Mongoose)
+                  a(href="") <span> Reactjs,Nextjs,Redux,React-hooks,API,Vuejs,Graphql,Apollo-server, Nodejs, Express</span>
                 li
-                  a(href="") Socket.io, Bower.js
+                  a(href="") Socket.io,
                 li
-                  a(href="") Unit test, Travesi
+                  a(href="") Unit test,
                 li
                   a(href="") Google Cloud 
             div(class="before")
@@ -65,11 +65,11 @@ block content
               div(class="after")
                 ul  
                   li
-                    a(href="") <strong> PHP </strong> (Wordpress, Larevel)
+                    a(href="") <strong> PHP,Laravel,Nuxtjs </strong>
                   li
                     a(href="") Gulp
                   li
-                    a(href="") Sass, Less
+                    a(href="") Sass
               div(class="contact_me")
                 .box1
                   <i class="far fa-comments"></i>
