--- a/views/index.pug
+++ b/views/index.pug
@@ -50,7 +50,7 @@ block content
                 li
                   a(href="") <strong> Javascript,</strong> Jquery
                 li
-                  a(href="") <span> Reactjs,Nextjs,Redux,React-hooks,API,Vuejs,Graphql,Apollo-server, Nodejs, Express</span>
+                  a(href="") <span> Reactjs,Nextjs,Redux,React-hooks,API,Vuejs,<br/>Graphql,Apollo-server, Nodejs, Express</span>
                 li
                   a(href="") Socket.io,
                 li
